syntax = "proto3";

option csharp_namespace = "Storage.GrpcContracts.Api";


package greet;

// Сервис для загрузки файлов
service UploadFileService {
  // Метод для загрузки файла
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse) {

  };
}

// Запрос для загрузки файла
message UploadFileRequest {
  oneof upload_data {
    Metadata metadata = 1; // Метаданные файла
    bytes data = 2;       // Данные файла
  }
}

// Метаданные файла
message Metadata {
  string file_name = 1;   // Имя файла
  string content_type = 2; // MIME-тип файла
}

// Ответ после загрузки файла
message UploadFileResponse {
  string file_url = 1;    // Ссылка на загруженный файл
}